# eventsourcing

./: Cargo.toml
eventsourcing-derive/: Cargo.toml
eventsourcing-derive/src/: lib.rs
src/: cloudevents.rs  lib.rs  prelude.rs
src/eventstore/: inmemory.rs  mod.rs
tests/: cloudevents.rs
