[package]
name = "eventsourcing"
version = "0.1.5"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
description = "Event Sourcing for Rust"
documentation = "https://docs.rs/eventsourcing"
repository = "https://github.com/pholactery/eventsourcing"
keywords = ["event", "eventsourcing", "aggregate", "command"]
categories = ["asynchronous","data-structures","rust-patterns","simulation"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/pholactery/eventsourcing"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
uuid =  { version = "1.3.1", features = ["v4"], optional = true }
reqwest = { version = "0.11.16", features = ["json", "blocking"], optional = true }
eventsourcing-derive = { path = "eventsourcing-derive", version = "0.1.3"}


[features]
default = []
eventstore = [ "uuid"]
orgeventstore = ["reqwest", "eventstore"]


[dev-dependencies]
# eventsourcing-derive = { path = "eventsourcing-derive", version = "0.1.3"}

[workspace]
members = ["eventsourcing-derive"]

[[example]]
name = "combat"
required-features = ["orgeventstore"]

[[example]]
name = "bank"
required-features = ["eventstore"]

[[example]]
name = "location"
required-features = ["eventstore"]

[package.metadata.docs.rs]
no-default-features = true
all-features = true