[package]
name = "eventsourcing-derive"
version = "0.1.3"
authors = ["autodidaddict <alothien@gmail.com>"]
description = "Custom derive macros for Eventsourcing components"
documentation = "https://docs.rs/eventsourcing-derive"
repository = "https://github.com/pholactery/eventsourcing/eventsourcing-derive"
keywords = ["event", "eventsourcing", "aggregate", "command"]
categories = ["asynchronous","data-structures","rust-patterns","simulation"]
license = "MPL-2.0"
homepage = "https://github.com/pholactery/eventsourcing"
edition = "2021"
[dependencies]
syn = "2.0.15"
quote = "1.0.26"
proc-macro2 = "1.0.56"

[lib]
proc-macro = true
